force-app/main/default/objects/sugati__FAM_Visit__c/sugati__FAM_Visit__c.object-meta.xml
<CustomObject>
    <description>Staff Visits</description>
    <label>FAM Visit</label>
    <nameField>
        <displayFormat>FV-{00000}</displayFormat>
        <label>FAM Visit No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FAM Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>