force-app/main/default/objects/sugati__FAM_Visit__c/fields/sugati__FV_Consultant__c.field-meta.xml
<CustomField>
    <fullName>sugati__FV_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please fill this in to indicate who has been to this supplier.</inlineHelpText>
    <label>Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FAM_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>