force-app/main/default/objects/sugati__FAM_Visit__c/fields/sugati__FV_FAM_Visit_End_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__FV_FAM_Visit_End_Date__c</fullName>
    <label>FAM Visit End Date</label>
    <type>Date</type>
</CustomField>