force-app/main/default/objects/sugati__FAM_Visit__c/fields/sugati__FV_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__FV_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Fill this in if there is a specific quote/booking for the FAM trip.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>FAM Visits</relationshipLabel>
    <relationshipName>FAM_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>