force-app/main/default/objects/sugati__FAM_Visit__c/fields/sugati__FV_Supplier_Contact__c.field-meta.xml
<CustomField>
    <fullName>sugati__FV_Supplier_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Contact</label>
    <referenceTo>sugati__Supplier_Contact__c</referenceTo>
    <relationshipLabel>FAM Visits</relationshipLabel>
    <relationshipName>FAM_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>