force-app/main/default/objects/sugati__FAM_Visit__c/fields/sugati__FV_Type_of_FAM__c.field-meta.xml
<CustomField>
    <fullName>sugati__FV_Type_of_FAM__c</fullName>
    <label>Type of FAM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Incentive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>